--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "mvvm-reactive-view",
     "version": "1.0.0",
     "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
-    "main": "index.js",
+    "main": "dist/index.js",
+    "types": "src/index.ts",
     "scripts": {},
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
     "keywords": [],
