--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "types": "src/index.ts",
     "scripts": {
-        "build": "tsc -b tsconfig.json && rollup -c rollup.config.js"
+        "build": " rollup -c rollup.config.js"
     },
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
     "keywords": [],
@@ -14,5 +14,17 @@
     "bugs": {
         "url": "https://github.com/masx200/mvvm-reactive-view/issues"
     },
-    "homepage": "https://github.com/masx200/mvvm-reactive-view#readme"
+    "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
+    "dependencies": {},
+    "devDependencies": {
+        "htm": "^2.2.1",
+        "rollup": "^1.21.2",
+        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-json": "^4.0.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-terser": "^5.1.2",
+        "rollup-plugin-typescript": "^1.0.1",
+        "tslib": "^1.10.0",
+        "typescript": "^3.6.3"
+    }
 }
