监测html生成的虚拟dom,如果出现未闭合标签会产生错误的vdom

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "module": "dist/index.js",
     "name": "mvvm-reactive-view",
     "version": "1.0.0",
     "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
