--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "strictNullChecks": true
   },
   "exclude": ["node_modules", "**/node_modules/*"],
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"]
 }
