--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
         "url": "https://github.com/masx200/mvvm-reactive-view/issues"
     },
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-    "dependencies": {},
-    "devDependencies": {
+    "dependencies": {
         "htm": "^2.2.1",
+        "dom-element-attribute-agent-proxy": "https://github.com/masx200/dom-element-attribute-agent-proxy.git"
+    },
+    "devDependencies": {
         "rollup": "^1.21.2",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-json": "^4.0.0",
