--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "paths": {
       "*": ["node_modules/*"]
     }
-  },
-  "exclude": ["node_modules", "**/node_modules/*"],
-  "include": ["src/**/*.ts"]
+  }
+  //"exclude": ["node_modules", "**/node_modules/*"]
+  //"include": ["src/**/*.ts"]
 }
