import "core-js/features/array/flat";

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {
+        "core-js": "^3.2.1",
         "dom-element-attribute-agent-proxy": "https://github.com/masx200/dom-element-attribute-agent-proxy.git",
         "htm": "^2.2.1"
     },
