--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
         "url": "https://github.com/masx200/mvvm-reactive-view/issues"
     },
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-    "dependencies": {
+    "dependencies": {},
+    "devDependencies": {
+        "core-js-pure": "^3.2.1",
         "dom-element-attribute-agent-proxy": "https://github.com/masx200/dom-element-attribute-agent-proxy.git",
         "htm": "^2.2.1",
-        "lodash": "^4.17.15"
-    },
-    "devDependencies": {
+        "lodash": "^4.17.15",
         "core-js": "^3.2.1",
         "rollup": "^1.21.2",
         "rollup-plugin-commonjs": "^10.1.0",
