--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "noFallthroughCasesInSwitch": true,
     "paths": {
       "*": ["node_modules/*"]
-    }
+    },
+    "importHelpers": true
   }
   //"exclude": ["node_modules", "**/node_modules/*"]
   //"include": ["src/**/*.ts"]
