--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "module": "dist/index.js",
+    "main": "dist/index.min.js",
+    "types": "src/index.ts",
+    "module": "dist/index.min.js",
     "name": "mvvm-reactive-view",
     "version": "1.1.3",
     "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
-    "main": "dist/index.js",
-    "types": "src/index.ts",
     "scripts": {
         "build": " rollup -c rollup.config.js",
         "test": "live-server"
@@ -19,9 +19,9 @@
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {},
     "devDependencies": {
-        "deep-observe-agent-proxy": "https://github.com/masx200/deep-observe-agent-proxy.git",
         "core-js": "^3.2.1",
         "core-js-pure": "^3.2.1",
+        "deep-observe-agent-proxy": "https://github.com/masx200/deep-observe-agent-proxy.git",
         "dom-element-attribute-agent-proxy": "https://github.com/masx200/dom-element-attribute-agent-proxy.git",
         "htm": "^2.2.1",
         "lodash": "^4.17.15",
