--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "main": "dist/index.min.js",
+    "main": "dist/index.js",
     "types": "src/index.ts",
-    "module": "dist/index.min.js",
+    "module": "dist/index.js",
     "name": "mvvm-reactive-view",
     "version": "1.1.5",
     "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
@@ -19,13 +19,17 @@
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {},
     "devDependencies": {
-"eslint": "^6.1.0",
+        "@typescript-eslint/eslint-plugin": "^2.2.0",
+        "@typescript-eslint/parser": "^2.2.0",
         "core-js": "^3.2.1",
         "core-js-pure": "^3.2.1",
         "deep-observe-agent-proxy": "https://github.com/masx200/deep-observe-agent-proxy.git",
         "dom-element-attribute-agent-proxy": "https://github.com/masx200/dom-element-attribute-agent-proxy.git",
+        "eslint": "^6.4.0",
+        "eslint-config-prettier": "^6.3.0",
         "htm": "^2.2.1",
         "lodash": "^4.17.15",
+        "prettier": "^1.18.2",
         "rollup": "^1.21.2",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-json": "^4.0.0",
