--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-  "plugins": [""],
+  //"validate": ["javascript", "typescript"],
+  /* "parserOptions":{
+
+}, */
+  "plugins": ["@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "env": {
     "browser": true,
@@ -9,17 +13,33 @@
     "commonjs": true,
     "amd": true
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "prettier",
+    "prettier/@typescript-eslint",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/eslint-recommended"
+  ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
+    // "project": "./tsconfig.json",
     "ecmaVersion": 2019,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
     }
   },
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/camelcase": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-explicit-any": 0,
+    "no-empty": 0,
+    "@typescript-eslint/no-use-before-define": 0,
+    "no-useless-escape": 0,
+    "no-var": 0
+  }
+  //  "autoFixOnSave": true
 }
