--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,3 +43,68 @@
   }
   //  "autoFixOnSave": true
 }
+
+/* 
+vscode编辑器设置eslint
+
+
+{
+    "editor.fontFamily": "Microsoft Yahei, Microsoft Yahei,Helvetica,Tahoma,Arial,PingFang SC,Hiragino Sans GB,Heiti SC,MicrosoftYaHei,WenQuanYi Micro Hei,sans-serif",
+    "editor.detectIndentation": false,
+    "window.zoomLevel": 1,
+    "terminal.integrated.rendererType": "dom",
+    "[html]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.wordWrap": "bounded",
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "workbench.colorTheme": "Material Color",
+    "[xml]": {
+        "editor.defaultFormatter": "mikeburgh.xml-format"
+    },
+    "workbench.statusBar.feedback.visible": false,
+    "[css]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "vsicons.dontShowNewVersionMessage": true,
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[less]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.formatOnSave": true,
+    "workbench.iconTheme": "Material Color",
+    "editor.fontSize": 15,
+    "editor.fontWeight": "bold",
+    "terminal.integrated.fontFamily": "monospace",
+    "debug.console.fontFamily": "Microsoft Yahei, Microsoft Yahei,Helvetica,Tahoma,Arial,PingFang SC,Hiragino Sans GB,Heiti SC,MicrosoftYaHei,WenQuanYi Micro Hei,sans-serif",
+    "sync.gist": "bda1b390f919289c4b0802a72d87c2ea",
+    "sync.autoUpload": true,
+    "[vue]": {},
+    "files.associations": {
+        "*.vue": "vue"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "files.autoSave": "off",
+    "typescript.updateImportsOnFileMove.enabled": "always",
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "eslint.autoFixOnSave": true,
+    "eslint.packageManager": "yarn",
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "typescript"
+    ]
+
+} */
