--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,8 @@
     "amd": true
   },
   "extends": [
-    "prettier",
-    "prettier/@typescript-eslint",
+  //  "prettier",
+  //  "prettier/@typescript-eslint",
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/eslint-recommended"
