--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {},
     "devDependencies": {
+        "@babel/preset-env": "^7.6.0",
+        "@babel/core": "^7.6.0",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@typescript-eslint/eslint-plugin": "^2.2.0",
         "@typescript-eslint/parser": "^2.2.0",
+        "babel-preset-env": "^1.7.0",
         "core-js": "^3.2.1",
         "core-js-pure": "^3.2.1",
         "deep-observe-agent-proxy": "https://github.com/masx200/deep-observe-agent-proxy.git",
@@ -34,6 +38,7 @@
         "lodash": "^4.17.15",
         "prettier": "^1.18.2",
         "rollup": "^1.21.2",
+        "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
