--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,8 @@
     "amd": true
   },
   "extends": [
-  //  "prettier",
-  //  "prettier/@typescript-eslint",
+    //  "prettier",
+    //  "prettier/@typescript-eslint",
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/eslint-recommended"
@@ -39,7 +39,8 @@
     "no-empty": 0,
     "@typescript-eslint/no-use-before-define": 0,
     "no-useless-escape": 0,
-    "no-var": 0
+    "no-var": 0,
+    "prefer-const": 0
   }
   //  "autoFixOnSave": true
 }
