依赖包从gitee下载

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "babel-preset-env": "^1.7.0",
         "core-js": "^3.2.1",
         "core-js-pure": "^3.2.1",
-        "deep-observe-agent-proxy": "https://github.com/masx200/deep-observe-agent-proxy.git",
-        "dom-element-attribute-agent-proxy": "https://github.com/masx200/dom-element-attribute-agent-proxy.git",
+        "deep-observe-agent-proxy": "https://gitee.com/masx200/deep-observe-agent-proxy.git",
+        "dom-element-attribute-agent-proxy": "https://gitee.com/masx200/dom-element-attribute-agent-proxy.git",
         "eslint": "^6.4.0",
         "eslint-config-prettier": "^6.3.0",
         "htm": "^2.2.1",
