--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
         "url": "https://github.com/masx200/mvvm-reactive-view/issues"
     },
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-    "dependencies": {},
+    "dependencies": {
+"deep-observe-agent-proxy": "https://gitee.com/masx200/deep-observe-agent-proxy.git",
+        "dom-element-attribute-agent-proxy": "https://gitee.com/masx200/dom-element-attribute-agent-proxy.git"
+       
+},
     "devDependencies": {
         "@babel/core": "^7.6.0",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -30,9 +34,7 @@
         "babel-preset-env": "^1.7.0",
         "core-js": "^3.2.1",
         "core-js-pure": "^3.2.1",
-        "deep-observe-agent-proxy": "https://gitee.com/masx200/deep-observe-agent-proxy.git",
-        "dom-element-attribute-agent-proxy": "https://gitee.com/masx200/dom-element-attribute-agent-proxy.git",
-        "eslint": "^6.4.0",
+         "eslint": "^6.4.0",
         "eslint-config-prettier": "^6.3.0",
         "htm": "^2.2.1",
         "lodash": "^4.17.15",
