--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.2.11",
+    "version": "1.2.12",
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/@masx200"
     },
@@ -26,6 +26,9 @@
         "dom-element-attribute-agent-proxy": "https://gitee.com/masx200/dom-element-attribute-agent-proxy.git"
     },
     "devDependencies": {
+        "node-sass": "^4.12.0",
+        "rollup-plugin-postcss": "^2.0.3",
+        "rollup-plugin-scss": "^1.0.2",
         "@babel/core": "^7.6.0",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/plugin-transform-react-jsx": "^7.3.0",
