--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "strictNullChecks": true,
     "baseUrl": ".",
     "noFallthroughCasesInSwitch": true,
-
+    "experimentalDecorators": true,
     /*  "paths": {
       "*": ["node_modules/*"]
     }, */
