--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,8 @@
     "@typescript-eslint/no-use-before-define": 0,
     "no-useless-escape": 0,
     "no-var": 0,
-    "prefer-const": 0
+    "prefer-const": 0,
+    "@typescript-eslint/no-inferrable-types": 0
   }
   //  "autoFixOnSave": true
 }
