--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "*": ["node_modules/*"]
     }, */
     "importHelpers": true
-  }
+  },
+  "include": ["*"]
   //"exclude": ["node_modules", "**/node_modules/*"]
   //"include": ["src/**/*.ts"]
 }
