--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "type": "module",
     "version": "1.2.17",
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/@masx200"
