--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+"allowUnreachableCode":false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
 "declaration": true,
