--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
 "allowUnreachableCode":false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
