--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
         "noImplicitAny": true,
     "importHelpers": true,
 "moduleResolution":"node",
-"allowSyntheticDefaultImports":true
+"allowSyntheticDefaultImports":true,
+"alwaysStrict":true
   },
   "include": ["*"]
   
