--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "scripts": {
         "build": "rollup -c rollup.config.js",
         "test": "rollup -c ./test/rollup.config.js",
-        "serve": "live-server"
+        "serve": "live-server",
+"prettier":"prettier --parser=typescript --write *.ts"
+
     },
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
     "keywords": [],
