--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,19 @@
 {
   "compilerOptions": {
-"resolveJsonModule": true,
+    "paths": {
+      "htm": ["./@types/htm"]
+    },
+    // "declarationMap": true,
+    /*  "typeRoots": ["./@types/htm/index"],
+    "types": ["./@types/htm/index"], */
+    // "types": ["./types/htm.d.ts"],
+    "declarationDir": "./dist",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
-"allowUnreachableCode":false,
+    "allowUnreachableCode": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-"declaration": true,
+    "declaration": true,
     "noUnusedLocals": true,
     "module": "esnext",
     "target": "esnext",
@@ -13,20 +21,20 @@
     "removeComments": true,
     "pretty": true,
     "strict": true,
-    "outDir": "./src/",
-    "rootDir": "./",
-    "allowJs": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    // "allowJs": true,
     "sourceMap": true,
     "strictNullChecks": true,
     "baseUrl": ".",
     "noFallthroughCasesInSwitch": true,
     "experimentalDecorators": true,
-        "noImplicitAny": true,
+    "noImplicitAny": true,
     "importHelpers": true,
-"moduleResolution":"node",
-"allowSyntheticDefaultImports":true,
-"alwaysStrict":true
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "alwaysStrict": true
   },
-  "include": ["*"]
-  
+  "include": ["*.ts", "./src/*.ts"],
+  "exclude": []
 }
