--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,33 @@
-{"compilerOptions":{"paths":{"htm":["./@types/htm"]},"declarationDir":"./dist","resolveJsonModule":true,"esModuleInterop":true,"allowUnreachableCode":false,"noImplicitReturns":true,"noImplicitThis":true,"declaration":true,"noUnusedLocals":true,"module":"esnext","target":"esnext","jsx":"preserve","removeComments":true,"pretty":true,"strict":true,"outDir":"./dist","rootDir":"./src","sourceMap":true,"strictNullChecks":true,"baseUrl":".","noFallthroughCasesInSwitch":true,"experimentalDecorators":true,"noImplicitAny":true,"importHelpers":true,"moduleResolution":"node","allowSyntheticDefaultImports":true,"alwaysStrict":true},"include":["*.ts","./src/*.ts"],"exclude":[]}
+{
+  "compilerOptions": {
+    "paths": { "htm": ["./@types/htm"] },
+    "declarationDir": "./dist",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowUnreachableCode": false,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "declaration": true,
+    "noUnusedLocals": true,
+    "module": "esnext",
+    "target": "esnext",
+    "jsx": "preserve",
+    "removeComments": true,
+    "pretty": true,
+    "strict": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "sourceMap": true,
+    "strictNullChecks": true,
+    "baseUrl": ".",
+    "noFallthroughCasesInSwitch": true,
+    "experimentalDecorators": true,
+    "noImplicitAny": true,
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "alwaysStrict": true
+  },
+  "include": ["*.ts", "./src/*.ts"],
+  "exclude": []
+}
