--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.2.25",
+    "version": "1.2.26",
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/@masx200"
     },
@@ -24,6 +24,7 @@
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {},
     "devDependencies": {
+        "rollup-plugin-html": "^0.2.1",
         "@babel/core": "^7.6.0",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/plugin-transform-react-jsx": "^7.3.0",
@@ -45,6 +46,7 @@
         "rollup": "^1.21.2",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-generate-html": "^0.2.0",
         "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-postcss": "^2.0.3",
