--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {},
     "devDependencies": {
+"@types/lodash":"^4.14.142",
         "rollup-plugin-html": "^0.2.1",
         "@babel/core": "^7.6.0",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
