--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "lodash": "^4.17.15",
         "node-sass": "^4.12.0",
         "prettier": "^1.18.2",
-        "rollup": "^1.21.2",
+        "rollup": "latest",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-commonjs": "^10.1.0",
     
