--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "paths": { "htm": ["./@types/htm"] },
+    "paths": { "htm": ["./@types/htm"], "package.json": ["./package.json"] },
     "declarationDir": "./dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
@@ -16,7 +16,7 @@
     "pretty": true,
     "strict": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "sourceMap": true,
     "strictNullChecks": true,
     "baseUrl": ".",
@@ -28,6 +28,6 @@
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true
   },
-  "include": ["*.ts", "./src/*.ts"],
+  "include": ["./src/*.ts"],
   "exclude": []
 }
