--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
     "rollup-plugin-typescript2": "^0.24.3",
     "terser": "^4.3.1",
     "tslib": "^1.10.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.0-dev.20191017"
   }
 }
