--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,36 @@
 {
-  "compilerOptions": {
-    "paths": { "htm": ["./@types/htm"], "package.json": ["./package.json"] },
-    "declarationDir": "./dist",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "allowUnreachableCode": false,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "declaration": true,
-    "noUnusedLocals": true,
-    "module": "esnext",
-    "target": "esnext",
-    "jsx": "preserve",
-    "removeComments": true,
-    "pretty": true,
-    "strict": true,
-    "outDir": "./dist",
-    "rootDir": "./",
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "baseUrl": ".",
-    "noFallthroughCasesInSwitch": true,
-    "experimentalDecorators": true,
-    "noImplicitAny": true,
-    "importHelpers": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true
-  },
-  "include": ["./src/*.ts"],
-  "exclude": []
+    "compilerOptions": {
+        "paths": {
+            "htm": ["./@types/htm"],
+            "packagejson": ["./package.json"]
+        },
+        "declarationDir": "./dist",
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "allowUnreachableCode": false,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "declaration": true,
+        "noUnusedLocals": true,
+        "module": "esnext",
+        "target": "esnext",
+        "jsx": "preserve",
+        "removeComments": true,
+        "pretty": true,
+        "strict": true,
+        "outDir": "./dist",
+        "rootDir": "./",
+        "sourceMap": true,
+        "strictNullChecks": true,
+        "baseUrl": ".",
+        "noFallthroughCasesInSwitch": true,
+        "experimentalDecorators": true,
+        "noImplicitAny": true,
+        "importHelpers": true,
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "alwaysStrict": true
+    },
+    "include": ["./src/*.ts"],
+    "exclude": []
 }
