--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,11 +34,12 @@
   "include": [
     "./src/*/*.ts",
     "./src/*.ts",
+    "./src/**/*.ts",
     "src/AttributeClass/*.ts",
     "src/Reactivity/*.ts",
     "src/Directives/*.ts",
     "src/ScopedCSS/*.ts",
-    "src/ScopedCSS/*.ts",
+
     "src/UtilTools/*.ts",
     "src/CreateElement/*.ts"
   ],
