## 更新:可以不使用`createComponent`,创建组件了,内部会自动使用`createComponent`,自动转换

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
     "src/UtilTools/*.ts",
     "src/CreateElement/*.ts",
     "src/CustomClass/*.ts",
-    "src/MountElement/*.ts"
+    "src/MountElement/*.ts",
+    "./package.json"
   ],
   "exclude": []
 }
