list-map,当卸载时,从document中移除所有itemclass,,/* "@masx200/dom-element-attribute-agent-proxy"       如果属性设置为false,则获取到的是undefined       */,现代浏览器除了edge浏览器都支持isConnectedstate = element.isConnected;

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.4.2",
+    "version": "1.4.3",
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/@masx200"
     },
@@ -11,7 +11,7 @@
     "scripts": {
         "build": "rollup -c rollup.config.js",
         "test": "rollup -c ./test/rollup.config.js",
-        "serve": "live-server",
+        "serve": "live-server test",
         "prettier": "prettier --parser=typescript --write ./src/*.ts"
     },
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
