给ReactiveState的嵌套添加set方法;给ReactiveState的Proxy的set拦截器方法,添加新值和旧值是否相等判断,;selectoraddprefix方法,返回值只留下selectorText: string;     cssText: string;     [Symbol.toStringTag]: string;,把不需要的属性删掉,优化性能

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-    "version": "1.4.5",
+    "version": "1.4.6",
+    "files": [
+        "dist"
+    ],
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/@masx200"
     },
@@ -12,7 +15,7 @@
         "build": "rollup -c rollup.config.js",
         "test": "rollup -c ./test/rollup.config.js",
         "serve": "live-server test",
-        "prettier": "prettier --parser=typescript --write ./src/*.ts"
+        "prettier": "prettier --parser=typescript --write ./src/**/*.ts"
     },
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
     "keywords": [],
