--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.4.11",
+    "version": "1.4.12",
     "files": [
         "dist"
     ],
@@ -57,6 +57,6 @@
         "rollup-plugin-typescript2": "^0.24.3",
         "terser": "^4.3.1",
         "tslib": "^1.10.0",
-        "typescript": "^3.7.0-dev.20191017"
+        "typescript": "^3.7.1-rc"
     }
 }
