--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.4.12",
+    "version": "1.4.13",
     "files": [
         "dist"
     ],
@@ -15,7 +15,8 @@
         "build": "rollup -c rollup.config.js",
         "test": "rollup -c ./test/rollup.config.js",
         "serve": "live-server test",
-        "prettier": "prettier --parser=typescript --write ./src/**/*.ts"
+        "prettier": "prettier --parser=typescript --write ./src/**/*.ts",
+        "test-prod": "cross-env NODE_ENV=production rollup -c ./test/rollup.config.js"
     },
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
     "keywords": [],
@@ -27,6 +28,7 @@
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {},
     "devDependencies": {
+        "cross-env": "^6.0.3",
         "@babel/core": "^7.6.0",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/plugin-transform-react-jsx": "^7.3.0",
