--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
     "allowJs": true,
     "paths": {
       "htm": ["./@types/htm"]
-      
     },
     "declarationDir": "./dist",
     "resolveJsonModule": true,
@@ -14,7 +13,7 @@
     "declaration": true,
     "noUnusedLocals": true,
     "module": "esnext",
-    "target": "es2017",
+    "target": "esnext",
     "jsx": "preserve",
     "removeComments": true,
     "pretty": true,
