--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "version": "1.5.0",
+    "version": "1.5.1",
+    "main": "./dist/index.min.js",
+    "types": "dist/index.d.ts",
+    "module": "./dist/index.min.js",
     "files": [
         "dist"
     ],
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/@masx200"
     },
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "module": "dist/index.js",
     "name": "@masx200/mvvm-reactive-view",
     "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
     "scripts": {
