--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.5.1",
+    "version": "1.5.2",
     "main": "./dist/index.min.js",
     "types": "dist/index.d.ts",
     "module": "./dist/index.min.js",
@@ -15,8 +15,7 @@
         "build": "rollup -c rollup.config.js",
         "test": "rollup -c ./test/rollup.config.js",
         "serve": "live-server test",
-        "prettier": "prettier --parser=typescript --write ./src/**/*.ts",
-        "test-prod": "cross-env NODE_ENV=production rollup -c ./test/rollup.config.js"
+        "prettier": "prettier --parser=typescript --write ./src/**/*.ts"
     },
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
     "keywords": [],
@@ -28,6 +27,7 @@
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {},
     "devDependencies": {
+        "event-target-shim": "^5.0.1",
         "@babel/core": "^7.6.4",
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/plugin-transform-react-jsx": "^7.3.0",
