--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "serialize-javascript": "^2.1.1",
     "terser": "^4.4.2",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.1-rc"
+    "typescript": "^3.7.3"
   }
 }
