function Condition(conditon: ReactiveState<boolean> | boolean, iftrue?: Virtualdom<any> | string, iffalse?: Virtualdom<any> | string): Virtualdom<Htmlelementconstructor>;
条件渲染改成了使用节点替换的方式,而非之前的删除和添加子节点的方式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,8 +43,7 @@
     "src/UtilTools/*.ts",
     "src/CreateElement/*.ts",
     "src/CustomClass/*.ts",
-    "src/MountElement/*.ts",
-    "./package.json"
+    "src/MountElement/*.ts"
   ],
   "exclude": []
 }
