--- a/package.json
+++ b/package.json
@@ -1,65 +1,70 @@
 {
-  "version": "1.5.3",
-  "main": "./dist/index.min.js",
-  "types": "dist/index.d.ts",
-  "module": "./dist/index.min.js",
-  "files": [
-    "dist"
-  ],
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@masx200"
-  },
-  "name": "@masx200/mvvm-reactive-view",
-  "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
-  "scripts": {
-    "build": "rollup -c rollup.config.js",
-    "test": "rollup -c ./test/rollup.config.js",
-    "serve": "live-server test",
-    "prettier": "prettier --parser=typescript --write ./src/**/*.ts"
-  },
-  "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
-  "keywords": [],
-  "author": "masx200 <34191203+masx200@users.noreply.github.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/masx200/mvvm-reactive-view/issues"
-  },
-  "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/preset-env": "^7.6.0",
-    "@masx200/deep-observe-agent-proxy": "https://gitee.com/masx200/deep-observe-agent-proxy.git",
-    "@masx200/dom-element-attribute-agent-proxy": "https://gitee.com/masx200/dom-element-attribute-agent-proxy.git",
-    "@types/lodash": "^4.14.142",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
-    "babel-plugin-htm": "^2.2.0",
-    "babel-preset-env": "^1.7.0",
-    "core-js": "^3.2.1",
-    "core-js-pure": "^3.2.1",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.3.0",
-    "event-target-shim": "^5.0.1",
-    "htm": "^2.2.1",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.18.2",
-    "rollup": "^1.27.9",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "serialize-javascript": "^2.1.1",
-    "terser": "^4.4.2",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.3"
-  }
+    "version": "1.5.4",
+    "main": "./dist/index.min.js",
+    "types": "dist/index.d.ts",
+    "module": "./dist/index.min.js",
+    "files": [
+        "dist"
+    ],
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/@masx200"
+    },
+    "name": "@masx200/mvvm-reactive-view",
+    "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
+    "scripts": {
+        "build": "rollup -c rollup.config.js",
+        "test": "rollup -c ./test/rollup.config.js",
+        "serve": "live-server test",
+        "prettier": "prettier --parser=typescript --write ./src/**/*.ts"
+    },
+    "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
+    "keywords": [],
+    "author": "masx200 <34191203+masx200@users.noreply.github.com>",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/masx200/mvvm-reactive-view/issues"
+    },
+    "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
+    "dependencies": {
+
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+        "@babel/plugin-syntax-nullish-coalescing-operator": "^7.8.3",
+        "@babel/plugin-transform-typescript": "^7.8.3",
+        "@babel/preset-typescript": "^7.8.3",
+        "@babel/core": "^7.8.3",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-transform-react-jsx": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
+        "@masx200/deep-observe-agent-proxy": "https://gitee.com/masx200/deep-observe-agent-proxy.git",
+        "@masx200/dom-element-attribute-agent-proxy": "https://gitee.com/masx200/dom-element-attribute-agent-proxy.git",
+        "@types/lodash": "^4.14.149",
+        "@types/node": "^13.1.7",
+        "@typescript-eslint/eslint-plugin": "^2.16.0",
+        "@typescript-eslint/parser": "^2.16.0",
+        "babel-plugin-htm": "^2.2.0",
+        "core-js": "^3.6.4",
+        "core-js-pure": "^3.6.4",
+        "eslint": "^6.8.0",
+        "event-target-shim": "^5.0.1",
+        "htm": "^2.2.1",
+        "lodash": "^4.17.15",
+        "node-sass": "^4.13.0",
+        "object-hash": "^2.0.1",
+        "prettier": "^1.19.1",
+        "rollup": "^1.29.0",
+        "rollup-plugin-babel": "^4.3.3",
+        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-json": "^4.0.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-postcss": "^2.0.3",
+        "rollup-plugin-sourcemaps": "^0.5.0",
+        "rollup-plugin-terser": "^5.2.0",
+        "rollup-plugin-typescript2": "^0.25.3",
+        "serialize-javascript": "^2.1.2",
+        "terser": "^4.6.3",
+        "tslib": "^1.10.0",
+        "typescript": "^3.8.0-dev.20200115"
+    }
 }
