--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "url": "https://github.com/masx200/mvvm-reactive-view/issues"
   },
   "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1"
+  },
   "devDependencies": {
-    "rollup-plugin-ts": "^1.2.12",
-    "@babel/core": "^7.8.3",
+    "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-syntax-nullish-coalescing-operator": "^7.8.3",
@@ -43,16 +46,12 @@
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "babel-plugin-htm": "^2.2.0",
-   
-    
-   
     "event-target-shim": "^5.0.1",
     "htm": "^2.2.1",
     "lodash": "^4.17.15",
-    
     "object-hash": "^2.0.1",
     "prettier": "^1.19.1",
-    "rollup": "^1.29.0",
+    "rollup": "^1.31.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
@@ -60,10 +59,11 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-ts": "^1.2.12",
     "rollup-plugin-typescript2": "^0.25.3",
     "serialize-javascript": "^2.1.2",
     "terser": "^4.6.3",
     "tslib": "^1.10.0",
-    "typescript": "^3.8.0-dev.20200115"
+    "typescript": "^3.7.5"
   }
 }
