--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
     "url": "https://github.com/masx200/mvvm-reactive-view/issues"
   },
   "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-  "dependencies": {
-      },
+  "dependencies": {},
   "devDependencies": {
-"@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1"
-,
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
