--- a/package.json
+++ b/package.json
@@ -27,9 +27,6 @@
   "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
   "dependencies": {},
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
@@ -40,6 +37,9 @@
     "@babel/preset-typescript": "^7.8.3",
     "@masx200/deep-observe-agent-proxy": "https://gitee.com/masx200/deep-observe-agent-proxy.git",
     "@masx200/dom-element-attribute-agent-proxy": "https://gitee.com/masx200/dom-element-attribute-agent-proxy.git",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.7",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
@@ -58,11 +58,11 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-terser": "^5.2.0",
-    "rollup-plugin-ts": "^1.2.12",
+    "rollup-plugin-ts": "^1.2.14",
     "rollup-plugin-typescript2": "^0.25.3",
     "serialize-javascript": "^2.1.2",
     "terser": "^4.6.3",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.1-rc"
   }
 }
