https://github.com/kitsonk/deno_ls_plugin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "allowJs": true,
+"plugins": [{ "name": "deno_ls_plugin" }]
+  ,
+  "allowJs": true,
     "paths": {
       "htm": ["./@types/htm"]
     },
