--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "type": "module",
-    "version": "1.5.8",
+    "version": "1.5.9",
     "main": "./dist/index.min.js",
-    "types": "dist/index.d.ts",
+    "types": "./dist/index.d.ts",
     "module": "./dist/index.min.js",
     "publishConfig": {
         "registry": "https://registry.npmjs.org/"
@@ -25,41 +25,38 @@
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
     "dependencies": {},
     "devDependencies": {
-        "live-server": "^1.2.1",
         "@babel/core": "^7.8.4",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
         "@babel/plugin-syntax-nullish-coalescing-operator": "^7.8.3",
         "@babel/plugin-transform-react-jsx": "^7.8.3",
         "@babel/plugin-transform-typescript": "^7.8.3",
-        "@babel/preset-env": "^7.8.3",
+        "@babel/preset-env": "^7.8.4",
         "@babel/preset-typescript": "^7.8.3",
-        "@masx200/deep-observe-agent-proxy": "https://gitee.com/masx200/deep-observe-agent-proxy.git",
-        "@masx200/dom-element-attribute-agent-proxy": "https://gitee.com/masx200/dom-element-attribute-agent-proxy.git",
+        "@masx200/deep-observe-agent-proxy": "^1.2.1",
+        "@masx200/dom-element-attribute-agent-proxy": "^1.2.1",
         "@rollup/plugin-commonjs": "^11.0.2",
         "@rollup/plugin-json": "^4.0.2",
         "@rollup/plugin-node-resolve": "^7.1.1",
         "@types/lodash": "^4.14.149",
-        "@types/node": "^13.1.7",
-        "babel-plugin-htm": "^2.2.0",
+        "@types/node": "^13.7.1",
+        "babel-plugin-htm": "^3.0.0",
         "event-target-shim": "^5.0.1",
-        "htm": "^2.2.1",
+        "htm": "^3.0.3",
+        "live-server": "^1.2.1",
         "lodash": "^4.17.15",
-        "object-hash": "^2.0.1",
+        "object-hash": "^2.0.2",
         "prettier": "^1.19.1",
         "rollup": "^1.31.0",
         "rollup-plugin-babel": "^4.3.3",
-        "rollup-plugin-commonjs": "^10.1.0",
-        "rollup-plugin-json": "^4.0.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-postcss": "^2.0.3",
+        "rollup-plugin-postcss": "^2.0.6",
         "rollup-plugin-sourcemaps": "^0.5.0",
         "rollup-plugin-terser": "^5.2.0",
         "rollup-plugin-ts": "^1.2.14",
-        "rollup-plugin-typescript2": "^0.25.3",
+        "rollup-plugin-typescript2": "^0.26.0",
         "serialize-javascript": "^2.1.2",
         "terser": "^4.6.3",
         "tslib": "^1.10.0",
-        "typescript": "^3.8.1-rc"
+        "typescript": "^3.7.5"
     }
 }
