--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "scripts": {
         "build": "rollup -c rollup.config.js",
         "watch": "rollup -c ./rollup.config.js --watch",
-        "serve": "live-server test",
+        "test": "live-server test",
         "prettier": "prettier *.js  *.json --write  *.md  ./src/**/*.ts  ./test/**/*.js ./src/*.ts  "
     },
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
