--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
     "scripts": {
         "build": "rollup -c rollup.config.js",
-        "watch": "rollup -c ./rollup.config.js --watch",
+        "watch": "rollup -c rollup.config.js --watch",
         "test": "live-server test",
         "prettier": "prettier *.js  *.json --write  *.md  ./src/**/*.ts  ./test/**/*.js ./src/*.ts  "
     },
