升级依赖,拆分测试,修改rollup配置,格式整理

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
     "scripts": {
         "build": "rollup -c rollup.config.js",
-        "watch": "rollup -c rollup.config.js --watch",
         "test": "live-server test",
         "prettier": "prettier *.js  *.json --write  *.md *.ts ./src/**/*.ts  ./test/src/*.ts ./src/*.ts  ./test/src/*.tsx "
     },
@@ -23,19 +22,15 @@
         "url": "https://github.com/masx200/mvvm-reactive-view/issues"
     },
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-    "dependencies": {
-        "typescript": "^3.8.3",
-        "@types/rollup-plugin-postcss": "^2.0.0",
-        "csstype": "^2.6.9"
-    },
+    "dependencies": {},
     "devDependencies": {
-        "@babel/core": "^7.8.4",
+        "@babel/core": "^7.8.7",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
         "@babel/plugin-syntax-nullish-coalescing-operator": "^7.8.3",
         "@babel/plugin-transform-react-jsx": "^7.8.3",
-        "@babel/plugin-transform-typescript": "^7.8.3",
-        "@babel/preset-env": "^7.8.4",
+        "@babel/plugin-transform-typescript": "^7.8.7",
+        "@babel/preset-env": "^7.8.7",
         "@babel/preset-typescript": "^7.8.3",
         "@masx200/deep-observe-agent-proxy": "^1.2.1",
         "@masx200/dom-element-attribute-agent-proxy": "^1.2.1",
@@ -43,23 +38,66 @@
         "@rollup/plugin-json": "^4.0.2",
         "@rollup/plugin-node-resolve": "^7.1.1",
         "@types/lodash": "^4.14.149",
-        "@types/node": "^13.7.1",
+        "@types/node": "^13.9.0",
+        "@types/rollup-plugin-postcss": "^2.0.0",
         "babel-plugin-htm": "^3.0.0",
+        "csstype": "^2.6.9",
         "event-target-shim": "^5.0.1",
         "htm": "^3.0.3",
         "live-server": "^1.2.1",
         "lodash": "^4.17.15",
-        "object-hash": "^2.0.2",
+        "object-hash": "^2.0.3",
         "prettier": "^1.19.1",
-        "rollup": "^1.31.0",
-        "rollup-plugin-babel": "^5.0.0-alpha.1",
-        "rollup-plugin-postcss": "^2.0.6",
+        "rollup": "^2.0.0",
+        "rollup-plugin-babel": "^4.3.3",
+        "rollup-plugin-postcss": "^2.2.0",
         "rollup-plugin-sourcemaps": "^0.5.0",
         "rollup-plugin-terser": "^5.2.0",
         "rollup-plugin-ts": "^1.2.14",
-        "rollup-plugin-typescript2": "^0.26.0",
-        "serialize-javascript": "^2.1.2",
-        "terser": "^4.6.3",
-        "tslib": "^1.10.0"
-    }
+        "serialize-javascript": "^3.0.0",
+        "terser": "^4.6.6",
+        "tslib": "^1.11.1",
+        "typescript": "^3.8.3",
+        "@types/estree": "^0.0.42",
+        "ansi-regex": "^5.0.0",
+        "ansi-styles": "^4.2.1",
+        "chalk": "^3.0.0",
+        "color-convert": "^2.0.1",
+        "color-name": "^1.1.4",
+        "debug": "^4.1.1",
+        "define-property": "^2.0.2",
+        "domelementtype": "^2.0.1",
+        "estree-walker": "^2.0.1",
+        "extend-shallow": "^3.0.2",
+        "has-flag": "^4.0.0",
+        "has-value": "^2.0.2",
+        "has-values": "^2.0.1",
+        "http-errors": "^1.7.3",
+        "inherits": "^2.0.4",
+        "is-accessor-descriptor": "^3.0.1",
+        "is-arrayish": "^0.3.2",
+        "is-data-descriptor": "^2.0.0",
+        "is-descriptor": "^3.0.0",
+        "is-extendable": "^1.0.1",
+        "is-fullwidth-code-point": "^3.0.0",
+        "is-glob": "^4.0.1",
+        "isobject": "^4.0.0",
+        "jsesc": "^2.5.2",
+        "json5": "^2.1.1",
+        "kind-of": "^6.0.3",
+        "minimist": "^1.2.0",
+        "ms": "^2.1.2",
+        "normalize-path": "^3.0.0",
+        "postcss": "^7.0.27",
+        "postcss-selector-parser": "^6.0.2",
+        "postcss-value-parser": "^4.0.3",
+        "safe-buffer": "^5.2.0",
+        "semver": "^7.1.3",
+        "setprototypeof": "^1.2.0",
+        "source-map": "^0.7.3",
+        "string-width": "^4.2.0",
+        "strip-ansi": "^6.0.0",
+        "supports-color": "^7.1.0"
+    },
+    "resolutions": {}
 }
