--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
+        "checkJs": false,
         "jsxFactory": "h",
         "useDefineForClassFields": false,
         "plugins": [],
         "allowJs": true,
         "paths": {
-            "htm": ["./@types/htm"]
+            // "htm": ["./@types/htm"]
         },
-        "declarationDir": "./dist",
+        "declarationDir": "./@types",
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "allowUnreachableCode": false,
@@ -22,7 +23,7 @@
         "pretty": true,
         "strict": true,
         "outDir": "./dist",
-        "rootDir": "./",
+        "downlevelIteration": true,
         "sourceMap": true,
         "strictNullChecks": true,
         "baseUrl": ".",
@@ -35,6 +36,23 @@
         "alwaysStrict": true,
         "forceConsistentCasingInFileNames": true
     },
-    "include": ["./src/*.ts", "./src/**/*.ts", "./test/src/*.ts"],
-    "exclude": []
+    "include": [
+        "*.ts",
+        "*.tsx",
+
+        "**/*.ts",
+        "**/*.tsx"
+        // "./src/*.ts",
+        // "./src/**/*.ts",
+        // "./test/src/*.ts",
+        // "./*.ts",
+        // "./test/src/*.tsx"
+    ],
+    "exclude": [
+        // "./index.ts",
+        // "./dist/*.js",
+        // "node_modules/**/*.js",
+        // "*.js",
+        // "./jsx.ts"
+    ]
 }
