添加了对于reactivestate的子类型检测

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "preserveConstEnums": false,
         "checkJs": false,
         "jsxFactory": "h",
         "useDefineForClassFields": false,
