--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
         "url": "https://github.com/masx200/mvvm-reactive-view/issues"
     },
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-    "dependencies": {
-        "@rollup/plugin-replace": "^2.3.1",
-        "acorn-jsx": "^5.2.0"
-    },
+    "dependencies": {},
     "devDependencies": {
+        "@rollup/plugin-replace": "^2.3.1",
+        "acorn-jsx": "^5.2.0",
         "@babel/core": "^7.8.7",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
