--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "build_polyfill": "rollup -c ./rollup/rollup-polyfill.js",
         "build_test": "rollup -c ./rollup/rollup-test.js",
         "test": "live-server test",
-        "prettier": "prettier *.js  *.json --write  *.md *.ts ./src/**/*.ts  ./test/src/*.ts ./src/*.ts  ./test/src/*.tsx "
+        "prettier": "prettier *.js  *.json --write  *.md *.ts ./src/**/*.ts  ./test/src/*.ts ./src/*.ts  ./test/src/*.tsx ./rollup/* "
     },
     "repository": "git+https://github.com/masx200/mvvm-reactive-view.git",
     "keywords": [],
