--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "name": "@masx200/mvvm-reactive-view",
     "description": "轻量级,响应式,mvvm,构建视图,声明式,组件化,基于webcomponent ,前端 javascript 库",
     "scripts": {
+        "build": "npm run build_main &&npm run build_polyfill&&npm run build_test ",
         "build_main": "rollup -c ./rollup/rollup-main.js",
         "build_polyfill": "rollup -c ./rollup/rollup-polyfill.js",
         "build_test": "rollup -c ./rollup/rollup-test.js",
@@ -35,7 +36,7 @@
         "@babel/preset-env": "^7.8.7",
         "@babel/preset-typescript": "^7.8.3",
         "@masx200/deep-observe-agent-proxy": "^1.2.1",
-        "@masx200/dom-element-attribute-agent-proxy": "^1.3.0",
+        "@masx200/dom-element-attribute-agent-proxy": "^1.3.1",
         "@rollup/plugin-commonjs": "^11.0.2",
         "@rollup/plugin-json": "^4.0.2",
         "@rollup/plugin-node-resolve": "^7.1.1",
